<resources>
    <string name="app_name">MovieCatalog</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_movies_details">MovieDetailsActivity</string>
    <string name="welcome_moviecatalog">Добро пожаловать\nв MovieCatalog</string>
    <string name="log_in_to_account">Войти в аккаунт</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="enter_into_account">Вход в аккаунт</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="enter">Войти</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="register">Регистрация</string>
    <string name="email">Электронная почта</string>
    <string name="name">Имя</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="date_of_birth">Дата рождения</string>
    <string name="male">Мужчина</string>
    <string name="female">Женщина</string>
    <string name="profile">Профиль</string>
    <string name="favorites">Избранное</string>
    <string name="movies">Фильмы</string>
    <string name="feed">Лента</string>
    <string name="title_activity_feed">FeedActivity</string>
    <string name="to_watch">Смотреть</string>
    <string name="to_watch_random_movie">Случайный фильм</string>
    <string name="my_favorites">Мне нравится</string>
    <string name="all">Все</string>
    <string name="all_movies">Все фильмы</string>
    <string name="favorite">Избранное</string>
    <string name="favorite_genres">Любимые жанры</string>
    <string name="favorite_movies">Любимые фильмы</string>
    <string name="there_is_nothing_here">Здесь пока пусто</string>
    <string name="add_genres_and_movies">
        Добавьте любимые жанры и фильмы, чтобы вернуться к ним позже
    </string>
    <string name="find_movie_for_you">Найти фильм для себя</string>
    <string name="my_friends">Мои друзья</string>
    <string name="personal_info">Личная информация</string>
    <string name="gender">Пол</string>
    <string name="title_activity_friends">FriendsActivity</string>
    <string name="rating">Рейтинг</string>
    <string name="information">Информация</string>
    <string name="director">Режиссёр</string>
    <string name="finance">Финансы</string>
    <string name="genres">Жанры</string>
    <string name="reviews">Отзывы</string>
    <string name="add_review">Добавить отзыв</string>
    <string name="no_description">У фильма нет описания :(</string>
    <string name="countries">Страны</string>
    <string name="unknown">Неизвестно</string>
    <string name="age">Возраст</string>
    <string name="time">Время</string>
    <string name="year_of_release">Год выхода</string>
    <string name="budget">Бюджет</string>
    <string name="fees">Сборы в мире</string>
    <string name="dot_divider"> • </string>
    <string name="good_morning">Доброе утро,</string>
    <string name="good_day">Добрый день,</string>
    <string name="good_evening">Добрый вечер,</string>
    <string name="good_night">Доброй ночи,</string>
    <string name="nick_name_default">Анонимный пользователь</string>
    <string name="friends_like_plural">Нравится %d вашим друзьям</string>
    <string name="friends_like_singular">Нравится %d вашему другу</string>
    <string name="error">Ошибка</string>
    <string name="incorrect_login_and_password">Неверные логин и пароль</string>
    <string name="anonymous_review">Анонимный отзыв</string>
    <string name="send">Отправить</string>
    <string name="score">Оценка</string>
    <string name="review_text">Текст отзыва</string>
    <string name="edit_review">Изменить отзыв</string>
    <string name="enter_avatar_link">Введите ссылку на аватар</string>
    <string name="cancellation">Отмена</string>
    <string name="confirm">Подтвердить</string>
    <string name="avatar_url">URL аватарки</string>
    <string name="prikol">Терпи, юзер, мое приложение с тобой еще не закончило</string>
</resources>