<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:startDestination="@id/feedFragment">

    <fragment
        android:id="@+id/feedFragment"
        android:name="com.example.moviecatalog.presentation.view.Fragments.FeedFragment"
        android:label="@string/feed" />

    <fragment
        android:id="@+id/moviesFragment"
        android:name="com.example.moviecatalog.presentation.view.Fragments.MoviesFragment"
        android:label="@string/movies" />

    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.example.moviecatalog.presentation.view.Fragments.FavoritesFragment"
        android:label="@string/favorites" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.moviecatalog.presentation.view.Fragments.ProfileFragment"
        android:label="@string/profile" />
</navigation>
