<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_moviecatalog"
        android:fontFamily="@font/manrope_bold"
        android:textColor="#FFFFFF"
        android:textSize="36sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/manrope_bold"
        android:text="@string/log_in_to_account"
        android:textColor="@color/white"
        android:layout_above="@id/registerButton"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_primary_default"
        android:textAllCaps="false"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/manrope_bold"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_secondary"
        android:textAllCaps="false"/>
</RelativeLayout>
