<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.example.moviecatalog.presentation.view.Views.GradientTextView
        android:id="@+id/personalInfoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/manrope_bold"
        android:text="@string/personal_info"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark"
        android:orientation="vertical"
        android:layout_marginTop="12dp"
        android:paddingBottom="96dp"
        app:layout_constraintTop_toBottomOf="@+id/personalInfoTextView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:fontFamily="@font/manrope_regular"
            android:textColor="@color/gray"
            android:textSize="14sp"
            android:layout_marginBottom="4dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/textLogin"
            android:layout_width="match_parent"
            android:layout_height="48dp"

            android:layout_marginBottom="12dp"
            android:background="@drawable/rounded_edit_text"
            android:drawablePadding="8dp"
            android:fontFamily="@font/manrope_bold"

            android:padding="12dp"
            android:textColor="@color/gray"
            android:text="@string/login"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:fontFamily="@font/manrope_regular"
            android:textColor="@color/gray"
            android:textSize="14sp"
            android:layout_marginBottom="4dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/textEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"

            android:layout_marginBottom="12dp"
            android:background="@drawable/rounded_edit_text"
            android:drawablePadding="8dp"
            android:fontFamily="@font/manrope_bold"

            android:padding="12dp"
            android:textColor="@color/gray"
            android:text="@string/email"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:fontFamily="@font/manrope_regular"
            android:textColor="@color/gray"
            android:textSize="14sp"
            android:layout_marginBottom="4dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/textName"
            android:layout_width="match_parent"
            android:layout_height="48dp"

            android:layout_marginBottom="12dp"
            android:background="@drawable/rounded_edit_text"
            android:drawablePadding="8dp"
            android:fontFamily="@font/manrope_bold"

            android:padding="12dp"
            android:textColor="@color/gray"
            android:text="@string/name"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_of_birth"
            android:fontFamily="@font/manrope_regular"
            android:textColor="@color/gray"
            android:textSize="14sp"
            android:layout_marginBottom="4dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/textDateOfBirth"
            android:layout_width="match_parent"
            android:layout_height="48dp"

            android:layout_marginBottom="12dp"
            android:background="@drawable/rounded_edit_text"
            android:drawablePadding="8dp"
            android:fontFamily="@font/manrope_bold"

            android:padding="12dp"
            android:textColor="@color/gray"
            android:text="25 августа 2005"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:fontFamily="@font/manrope_regular"
            android:textColor="@color/gray"
            android:textSize="14sp"
            android:layout_marginBottom="4dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ToggleButton
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@drawable/toggle_active"
                android:checked="true"
                android:enabled="false"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textOff="@string/male"
                android:textOn="@string/male"
                android:textSize="14sp" />

            <ToggleButton
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@drawable/toggle_inactive"
                android:checked="false"
                android:enabled="false"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textOff="@string/female"
                android:textOn="@string/female"
                android:textSize="14sp" />
        </RadioGroup>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>